[gd_scene load_steps=12 format=2]

[ext_resource path="res://PixelArt/UI/pethouseUI.png" type="Texture" id=1]
[ext_resource path="res://Others/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Others/Fonts/joystix monospace.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://PixelArt/Characters/Pets/unknownTexture.png" type="Texture" id=4]
[ext_resource path="res://UI/PetHouseUI.gd" type="Script" id=5]
[ext_resource path="res://PixelArt/UI/locked_btn.png" type="Texture" id=6]
[ext_resource path="res://Others/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 7 )

[node name="PetHouseUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.002
margin_top = 0.707153
margin_bottom = 0.0671387
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="ui_labels" type="Control" parent="."]
margin_left = 56.0
margin_right = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetHouse" type="Label" parent="ui_labels"]
margin_left = 161.0
margin_top = 48.0
margin_right = 296.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pet House"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Get" type="Label" parent="ui_labels"]
margin_left = 188.0
margin_top = 187.0
margin_right = 268.0
margin_bottom = 204.0
custom_colors/font_color = Color( 0.647059, 0.380392, 0.321569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Get Pet"
align = 1
valign = 1
uppercase = true

[node name="Save" type="Label" parent="ui_labels"]
margin_left = 188.0
margin_top = 237.0
margin_right = 268.0
margin_bottom = 254.0
custom_colors/font_color = Color( 0.647059, 0.380392, 0.321569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Save Pet"
align = 1
valign = 1
uppercase = true

[node name="pet" type="Label" parent="ui_labels"]
margin_left = 192.0
margin_top = 131.0
margin_right = 264.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 2 )
text = "pet"
align = 1
valign = 1

[node name="pet_name" type="Control" parent="."]

[node name="body" type="Label" parent="pet_name"]
margin_left = 239.0
margin_top = 149.0
margin_right = 329.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 3 )
text = "default body"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pet_preview" type="Node2D" parent="."]
position = Vector2( 352, 144 )
scale = Vector2( 3, 3 )

[node name="body" type="Sprite" parent="pet_preview"]
position = Vector2( -22.6667, -13.6667 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChangePet" type="TextureButton" parent="buttons"]
anchor_left = 0.588
anchor_top = 0.45
anchor_right = 0.616
anchor_bottom = 0.525
margin_left = 0.0159302
margin_right = 0.111969
margin_bottom = -1.52588e-05
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangePreviousPet" type="TextureButton" parent="buttons"]
anchor_left = 0.384
anchor_top = 0.45
anchor_right = 0.412
anchor_bottom = 0.525
margin_left = -0.112045
margin_right = -0.0160217
margin_bottom = -1.52588e-05
focus_mode = 0
enabled_focus_mode = 0

[node name="Get" type="TextureButton" parent="buttons"]
anchor_left = 0.419
anchor_top = 0.578
anchor_right = 0.583
anchor_bottom = 0.647
margin_left = 0.00798035
margin_top = 0.0399933
margin_right = -0.144012
margin_bottom = -0.0400085
focus_mode = 0
enabled_focus_mode = 0

[node name="Save" type="TextureButton" parent="buttons"]
anchor_left = 0.419
anchor_top = 0.734
anchor_right = 0.583
anchor_bottom = 0.803
margin_left = 0.00798035
margin_top = 0.119995
margin_right = -0.144012
margin_bottom = 0.039978
focus_mode = 0
enabled_focus_mode = 0

[node name="GetLocked" type="Sprite" parent="buttons"]
visible = false
modulate = Color( 0.772549, 0.772549, 0.772549, 1 )
position = Vector2( 284.586, 194.474 )
scale = Vector2( 0.928897, 0.849197 )
texture = ExtResource( 6 )

[node name="SaveLocked" type="Sprite" parent="buttons"]
visible = false
modulate = Color( 0.772549, 0.772549, 0.772549, 1 )
position = Vector2( 284.586, 242.474 )
scale = Vector2( 0.928897, 0.849197 )
texture = ExtResource( 6 )

[connection signal="pressed" from="buttons/ChangePet" to="." method="_on_ChangeBody_pressed"]
[connection signal="pressed" from="buttons/ChangePreviousPet" to="." method="_on_ChangePreviousBody_pressed"]
[connection signal="pressed" from="buttons/Get" to="." method="_on_Get_pressed"]
[connection signal="pressed" from="buttons/Save" to="." method="_on_Save_pressed"]
